--- a/css/styles.css
+++ b/css/styles.css
@@ -743,6 +743,7 @@ input[type=radio] input[type="checkbox"]:checked+input[type=radio]::before+input
 #s5:checked~#slide1 {
     /* box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2); */
     transform: translate3d(20%, 0, -100px);
+    opacity: 0.5;
 }
 
 
@@ -754,6 +755,7 @@ input[type=radio] input[type="checkbox"]:checked+input[type=radio]::before+input
 #s5:checked~#slide2 {
     /* box-shadow: 0 1px 4px rgba(0,0,0, 0.4); */
     transform: translate3d(40%, 0, -250px);
+    opacity: 0.5;
 }
 
 /* Previous to Previous Slide */
@@ -764,6 +766,7 @@ input[type=radio] input[type="checkbox"]:checked+input[type=radio]::before+input
 #s5:checked~#slide3 {
     /* box-shadow: 0 1px 4px rgba(0,0,0, 0.4); */
     transform: translate3d(-40%, 0, -250px);
+    opacity: 0.5;
 }
 
 /* Previous Slide */
@@ -774,6 +777,7 @@ input[type=radio] input[type="checkbox"]:checked+input[type=radio]::before+input
 #s5:checked~#slide4 {
     /* box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2); */
     transform: translate3d(-20%, 0, -100px);
+    opacity: 0.5;
 }
 
 
